# JLU_software_project

./: .gitignore  API_STATUS.md  MISSING_FEATURES.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  alembic.ini  database_design.md  env.example  full.md  pyproject.toml  test_campus_create.sh  test_campus_management.py  test_new_apis.sh  test_system.sh  test_user_management.py  test_user_management.sh
alembic/: env.py
alembic/versions/: 88242fafa1f3_add_comment_table.py  9f236671dab7_initial_migration.py
backend/: run.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  booking.py  campus.py  coach.py  coach_student.py  comment.py  competition.py  course.py  evaluation.py  license.py  notification.py  payment.py  student.py  system_log.py  user.py
backend/app/schemas/: __init__.py  booking.py  campus.py  coach.py  coach_student.py  comment.py  competition.py  evaluation.py  license.py  notification.py  payment.py  student.py  system_log.py  user.py
backend/app/services/: __init__.py  booking_service.py  booking_service.py.new  campus_service.py  coach_service.py  coach_student_service.py  comment_service.py  competition_service.py  evaluation_service.py  license_service.py  notification_service.py  payment_service.py  (+3 more)
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: check_coaches.py  check_comments.py  init-sqlite.sh  init_sample_data.py  start-dev.sh  test_api.sh  test_coach_student_flow.sh
(+58 files in other folders)
